Tried to get heroku server online for demo purposes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Angaras</string>
     <string name="action_settings">Settings</string>
     <string name="sendbutton">Send</string>
+    <string name="submit_name">Submit</string>
+    <string name="enter_name">Enter Name:</string>
 </resources>
