--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Angaras</string>
     <string name="action_settings">Settings</string>
     <string name="sendbutton">Send</string>
-    <string name="submit_name">Submit</string>
+    <string name="submit_info">Submit Info</string>
     <string name="enter_name">Enter Name:</string>
+    <string name="channel_name">Enter channel:</string>
+    <string name="info_about_server">Go to https://radiant-basin-1062.herokuapp.com/ in your broswer to wake sleeping heroku dyno before trying to use this app. You should see text indicating it is a temporary server</string>
 </resources>
